# xlsx-value-picker

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml  conftest.py  main.py  pyproject.toml  test_main.py
.github/: copilot-instructions.md
.github/workflows/: test.yml
.roo/rules/: copilot-instructions.md
docs/: README.md  cli-implementation-plan.md  cli-spec.md  expression-type-recognition-fix.md  mermaid-fix.md  mermaid-style-guide.md  project-status.md  requirements.md  rule-schema.json
docs/design/: config-loader-design.md  validation-design.md
docs/guide/: dependency-management-guideline.md  directory-structure-guideline.md  pydantic-model-design-guideline.md  version-control-guideline.md
docs/project/: directory-structure.md  technology-selection.md
docs/spec/: cli-spec.md  rule-schema.json
docs/task_log/: DONE_add-mcp-server-feature.md  DONE_cli-integration-plan.md  DONE_compare_expression_schema_update.md  DONE_delete-template-module.md  DONE_directory-structure-guideline-creation.md  DONE_document-reorganization-complete.md  DONE_fix_diagnostics_ruff.md  DONE_improve-cli-error-handling.md  DONE_investigate-pytest-raises-behavior.md  DONE_move-validation-expressions.md  DONE_project-status-update.md  DONE_pydantic-guideline-creation.md  DONE_readme_update.md  DONE_remove_internal_schema_validation.md  DONE_required_isempty_expressions_implementation.md  DONE_split_test_cli_integration.md  DONE_test-execution-plan.md  DONE_test-implementation-plan.md  DONE_test-refactoring-plan.md  DONE_validation-implementation-plan.md  DONE_validation-implementation-verification.md  PLANNING_add-mcp-server-feature.md  PLANNING_directory-structure-guideline-creation.md  PLANNING_fix_diagnostics.md  PLANNING_fix_diagnostics_excel.md  PLANNING_fix_diagnostics_pydantic.md  PLANNING_fix_diagnostics_ruff.md  PLANNING_improve-cli-error-handling.md  PLANNING_investigate-pytest-raises-behavior.md  PLANNING_project-status-update.md  PLANNING_pydantic-guideline-creation.md  PLANNING_readme_update.md  PLANNING_refactor-test-code.md  PLANNING_remove_internal_schema_validation.md  PLANNING_required_isempty_expressions_implementation.md  PLANNING_test-refactoring-plan.md  PLANNING_validation-implementation-plan.md  PLANNING_validation-implementation-verification.md  WIP_add-mcp-server-feature.md  WIP_delete-template-module.md  (+12 more)
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/xlsx_value_picker/: __init__.py  __main__.py  cli.py  config.py  config_loader.py  excel_processor.py  exceptions.py  output_formatter.py  template.py  validation.py  validation_common.py  (+1 more)
test/: create_test_file.py  generate_sample.py  helper_exceptions.py  sample_template.j2  test_cli_basic.py  test_cli_errors.py  test_cli_integration.py  test_cli_options.py  test_cli_validation.py  test_config.yaml  test_config_loader.py  test_excel_processor.py  test_main.py  test_mcp_server.py  test_output_formatter.py  test_pathlib.py  test_pytest.py  test_template.py  test_validation.py
(+30 files in other folders)
