[project]
name = "xslx-value-picker"
version = "0.1.0"
description = "Excelから値を抽出しJSON/YAML出力するCLIツール"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pyyaml>=6.0.2",
]
authors = [
    { name = "DOBEE", email = "example@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
xslx-value-picker = "xslx_value_picker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
