[project]
name = "xlsx-value-picker"
version = "0.1.0"
description = "Excelから値を抽出しJSON/YAML出力するCLIツール"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "fastmcp>=2.2.5",
    "jinja2>=3.1.6",
    "jsonschema>=4.23.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
]
authors = [
    { name = "mosaan" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
xlsx-value-picker = "xlsx_value_picker.cli:main"

[tool.ruff]
# 1行の最大文字数
line-length = 120

[tool.ruff.lint]
# チェックするエラーの種類
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
# 除外するエラーの種類
ignore = [
    #"B904", # raise ... from ... になっていない場合のエラーを無視
]

# ファイルごとのエラー除外
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# isort の設定
[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.pyupgrade]
# Python3.8互換のための設定
keep-runtime-typing = true

[tool.mypy]
strict = true
exclude = "(^build/|^dist|^test/)"
show_error_codes = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=67.1.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "anyio[trio]>=4.9.0",
    "mypy>=1.15.0",
    "pip-licenses>=5.0.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
    "types-openpyxl>=3.1.5.20250306",
    "types-pyyaml>=6.0.12.20250402",
]
